--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 </script>
 <h1>Spaghetti Recipe</h1> 
 	<h2>Ingredients</h2>
-	<ul>
-		<strong><li>Spaghetti</li>
+	<strong><ul>
+		 <li>Spaghetti</li>
 		<li>Marinara Sauce</li>
 		<li>Salt</li>
-		<li>Water</li></strong>
-	</ul>
+		<li>Water</li> 
+	</ul></strong>
 	<h2>Instructions</h2>
 	<strong><ol>
 		<li>Bring water to a boil.</li>
@@ -27,9 +27,9 @@
 			<li>Cook for 10 minutes, stirring occasionally.</li></ol>
 		<li>Add marinara sauce to a pan, bringing to a simmer.</li>
 		<li>Mix cooked spaghetti with marinara sauce.</li>
-		<li>Enjoy!</li></strong>
+		<li>Enjoy!</li> 
 		
-	</ol>
+	</ol></strong>
 	
 </body>
 
